funciona bien con mysql 8 como contenedor docker